--- a/index.css
+++ b/index.css
@@ -378,7 +378,7 @@ html{
     transition: .5s;
 }
 .button-certificaiones a:hover{
-    background-color: #ffffff;
+    background-color: #b6ddd5;
     color: #000000;
 }
 
